navbar alignment fixed on all breakpoints

--- a/styles/section/_hero.scss
+++ b/styles/section/_hero.scss
@@ -32,6 +32,7 @@
 @media (min-width: 320px) and (max-width: 767px) {
   .hero {
     &__illustration {
-      display: none;z}
+      display: none;
+    }
   }
 }
